add html and css starting code

--- a/develop/index.html
+++ b/develop/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Song Finder</title>
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    
+    <header class="hero">
+        <h1 class="app-title">Song Finder</h1>
+      </header>
+
+      <main>
+        <section class="sidebar">
+            <p>Type any music gener you would like to create a playlist of it</p>
+            <form id="user-form" class="card-body">
+                <button type="submit" class="btn">youtube</button>
+                <button type="submit" class="btn">Spotify</button>
+                <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
+                <button type="submit" class="btn">Search</button>
+              </form>
+        </section>
+      </main>
 </body>
 </html>
