Centered all of the inputs on the landing page

--- a/develop/homeindex.html
+++ b/develop/homeindex.html
@@ -13,16 +13,18 @@
                 <h1><strong>Song Translator</strong></h1>
             </div>
             <div class="description">
-                <p>Type in any song to translate it</p>
+                <p>What song would you like translated?</p>
             </div>
             <div class="inputEl">
                 <input type="text" name="input" id="form-input" placeholder="Chicago Freestyle">
             </div>
             <div class="language">
-                <p>What language?</p>
-                <select>
-                    <option value="Spanish">Spanish</option>
-                </select>
+                <p>What language would you like it translated to</p>
+                <div class="languageOps">
+                    <select>
+                        <option value="Spanish">Spanish</option>
+                    </select>
+                </div>
             </div>
             <div class="generate">
                 <button>Translate</button>
