--- a/develop/landing.html
+++ b/develop/landing.html
@@ -20,9 +20,11 @@
             </div>
             <div class="language">
                 <p>What language would you like it translated to</p>
-                <select>
-                    <option value="Spanish">Spanish</option>
-                </select>
+                <div class="languageOps">
+                    <select>
+                        <option value="Spanish">Spanish</option>
+                    </select>
+                </div>
             </div>
             <div class="generate">
                 <button>Translate</button>
