added basic js for search and language input along with error messages

--- a/develop/landing.html
+++ b/develop/landing.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <main>
-        <div class="card">
+        <form id= 'search-form' class="card">
+            <div id="search-input">
             <div class="header">
                 <h1><strong>Song Translator</strong></h1>
             </div>
@@ -18,7 +19,7 @@
             <div class="inputEl">
                 <input type="text" name="input" id="form-input" placeholder="Chicago Freestyle">
             </div>
-            <div class="language">
+            <div id="language-input" class="language">
                 <p>What language would you like it translated to</p>
                 <select>
                     <option value="Spanish">Spanish</option>
@@ -27,7 +28,8 @@
             <div class="generate">
                 <button>Translate</button>
             </div>
-        </div>
+            </div>
+        </form>
     </main>
 <script src="./js/script.js"></script>
 </body>
