moved script tag in index to bottom of the page

--- a/develop/index.html
+++ b/develop/index.html
@@ -6,8 +6,6 @@
     <title>Song Finder</title>
 </head>
 <body>
-    <script src="./js/script.js"></script>
-
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Song Finder</title>
     <link rel="stylesheet" href="./css/style.css" />
@@ -28,5 +26,6 @@
               </form>
         </section>
       </main>
+      <script src="./js/searchResults.js"></script>
 </body>
 </html>
