--- a/develop/index.html
+++ b/develop/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Song Finder</title>
+    <title>Song Translator</title>
 </head>
 <body>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Song Finder</title>
+    <title>Song Translator</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <header class="hero">
-        <h1 class="app-title">Song Finder</h1>
+        <h1 class="app-title">Song Translator</h1>
       </header>
 
       <main>
@@ -25,6 +25,10 @@
                 <button type="submit" class="btn">Search</button>
               </form>
         </section>
+
+        <div>
+          <h1>Lyrics for:<span id="lyric-text"></span></h1>
+        </div>
       </main>
       <script src="./js/searchResults.js"></script>
 </body>
