changed id names and started new js

--- a/develop/index.html
+++ b/develop/index.html
@@ -10,7 +10,7 @@
     <header class="hero">
         <h1 class="app-title">Welcome to Travel Planner</h1>
       </header>
-
+        <div id="search-form">
       <main class="container">
         <section class="sidebar">
             <p>Enter your country or city you like to visit</p>
@@ -21,6 +21,7 @@
                 <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
                 <button type="submit" class="btn">Search</button>
               </form>
+            </div>
               <hr class="line"> 
               <p> Search History</p>
 
@@ -49,6 +50,6 @@
         </section>
       </main>
 
-      <script src="./js/searchResults.js"></script>
+      <script src="./js/script.js"></script>
 </body>
 </html>
