console log city name and geocoding

--- a/develop/index.html
+++ b/develop/index.html
@@ -33,6 +33,9 @@
 
         </section>
 
+        <div id="data-display">
+        </div>
+
         <section class="middleside">
           <div id="info1" class="datainfo1">
             <img src="./images/AR.png"/>
