--- a/develop/home.html
+++ b/develop/home.html
@@ -30,8 +30,8 @@
                     <input type="text" name="inputCity" class="form-input" placeholder="City">
                 </div>
             </div>
-            <div class="find">
-                <button>Find</button>
+            <div class="search">
+                <button>Search</button>
             </div>
         </div>
     </main>
