--- a/develop/index.html
+++ b/develop/index.html
@@ -27,9 +27,7 @@
                 <button type="submit" class="btn" id="search">Search</button>
               </form>
 
-              <div id="data-display">
-              </div>
-            </div>
+              <div id="data-display"></div>
               <hr class="line"> 
               <p> Search History</p>
 
@@ -59,6 +57,11 @@
         </section>
       </main>
 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+       crossorigin="anonymous"></script>
+       
       <script src="./js/script.js"></script>
 </body>
 </html>
