add currency converter

--- a/develop/index.html
+++ b/develop/index.html
@@ -22,6 +22,22 @@
         <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" placeholder="Paris" />
         <button type="submit" class="btn" id="search">Search</button>
     </form>
+
+    <div class="line"></div>
+
+    <div class="description">
+        <p>Currency Converter , Can find the currency code in country informaatin</p>
+    </div>
+    <form id="user-form" class="card-body">
+        <label > First Country Currency Code:</label>
+        <input name="firstcountry" id="firstcountry" type="text" autofocus="true" class="form-input" placeholder="USD"/>
+        <label >Second Country Currency Code:</label>
+        <input name="secondcountry" id="secondcountry" type="text" autofocus="true" class="form-input" placeholder="EUR" />
+        <label >Currency amount:</label>
+        <input name="amount" id="amount" type="text" autofocus="true" class="form-input" placeholder="0000" />
+        <button type="submit" class="btn" id="currency">Convert</button>
+    </form>
+
         <div class="line"></div>
         <div class="searchHistory">
             <p><u>Search History</u></p>
