--- a/develop/index.html
+++ b/develop/index.html
@@ -42,6 +42,8 @@
         <div class="searchHistory">
             <p><u>Search History</u></p>
         </div>
+        <button type="submit" class="btn" id="clearbtn">Clear History</button>
+
        
     </section>
     <section class="resultContent">
@@ -52,8 +54,8 @@
         <div class="datainfo3" id="info3"></div>
         <div class="datainfo4" id="info4"></div>
         <div class="buttons">
-            <button type="click" class="btn">Next</button>
-            <button type="click" class="btn">Back</button>
+            <button type="click" class="btn" id="back">Back</button>
+            <button type="click" class="btn" id="next">Next</button>
         </div> 
     </section>
   </main>
