--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/w3.css"/>
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./develop/css/w3.css"/>
+    <link rel="stylesheet" href="./develop/css/style.css"/>
     <title>Travel Planner</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
         </section>
         <section class="resultContent w3-rest">
             <div class="dataInfo1" id="info1">
-                <img src="./images/AR.png"/>
+                <img src="./develop/images/flags/AE.png"/>
             </div>
             <div class="datainfo2" id="info2"></div>
             <div class="datainfo3" id="info3"></div>
@@ -80,7 +80,7 @@
     </section>
     <section class="resultContent">
         <div class="dataInfo1" id="info1">
-            <img src="./images/AR.png"/>
+            <img src="./develop/images/AR.png"/>
         </div>
         <div class="datainfo2" id="info2"></div>
         <div class="datainfo3" id="info3"></div>
@@ -97,6 +97,6 @@
        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
        crossorigin="anonymous"></script>
 
-<script src="./js/script.js"></script>
+<script src="./develop/js/script.js"></script>
 </body>
 </html>
