--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <div class="searchHistory">
                 <p><u>Search History</u></p>
             </div>
+
+            <button type="submit" class="btn" id="cleanhistory">Clean History</button>
         
         </section>
         <section class="resultContent w3-rest">
@@ -54,8 +56,8 @@
             <div class="datainfo3" id="info3"></div>
             <div class="datainfo4" id="info4"></div>
             <div class="buttons">
-                <button type="click" class="btn">Next</button>
-                <button type="click" class="btn">Back</button>
+                <button type="click" class="btn" id="back">Back</button>
+                <button type="click" class="btn" id="next">Next</button>
             </div> 
         </section>
     </div>
